--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 :root{
-    --destaque: white
+    --destaque: #006494;
+    --destaque02:#00A6FB;
 }
 
 
 body{
-    background-image: linear-gradient(to right, darkblue,blue,purple);
+    background-image: linear-gradient(to top, #051923,#03273C,#003554);
+    margin: 0 auto;
+    color: white;
 }header{
     width: 100%;
     height: 200px;
@@ -20,10 +23,9 @@ body{
 }header p{
     float: left;
     margin: 10px 20px 10px 10px;
-    color: var(--destaque);
 }a{
     text-decoration: none;
-    color: black;
+    color: white;
 }header a:hover {
     border-bottom: 2px white solid;
     color: var(--destaque);
@@ -40,7 +42,7 @@ body{
     width: 20%;
     margin: -100px 10px 10px 30px;
     border-radius: 108px;
-    border: 5px var(--destaque) solid;
+    border: 5px var(--destaque02) solid;
 }#sobre a img{
     width: 
     5%;
@@ -62,49 +64,99 @@ body{
     margin: 0 auto;
     height: 15px;
     margin-top: 10px;
-    background-color: antiquewhite;
+    background-color: var(--destaque);
     border-radius: 10px;
 }.Html .conteudo .porcentagem{
     width: 80%;
     height: 100%;
-    background-color: aqua;
+    background-color: var(--destaque02);
     border-radius: 10px;
 }.Css .conteudo{
     width: 50%;
     margin: 0 auto;
     height: 15px;
     margin-top: 10px;
-    background-color: antiquewhite;
+    background-color: var(--destaque);
     border-radius: 10px;
 }.Css .conteudo .porcentagem{
     width: 50%;
     height: 100%;
-    background-color: aqua;
+    background-color: var(--destaque02);
     border-radius: 10px;
 }.javascript .conteudo{
     width: 50%;
     margin: 0 auto;
     height: 15px;
     margin-top: 10px;
-    background-color: antiquewhite;
+    background-color: var(--destaque);
     border-radius: 10px;
 }.javascript .conteudo .porcentagem{
     width: 50%;
     height: 100%;
-    background-color: aqua;
+    background-color: var(--destaque02);
     border-radius: 10px;
 }.node .conteudo{
     width: 50%;
     margin: 0 auto;
     height: 15px;
     margin-top: 10px;
-    background-color: antiquewhite;
+    background-color: var(--destaque);
     border-radius: 10px;
 }.node .conteudo .porcentagem{
     width: 20%;
     height: 100%;
-    background-color: aqua;
+    background-color: var(--destaque02);
     border-radius: 10px;
+}#Projetos{
+    display: flex;
+    width: 100%;
+    height: 300px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    justify-content: space-between;
+    align-items: center;
+}#Projetos div{
+    width: 25%;
+    height: 400px;
+    margin: 0 auto;
+    text-align: center;
+    background-color:#051923;
+    border: var(--destaque02) 5px solid;
+    color: white;
+    border-radius: 10px;
+    perspective: 1000px;
+}#Projetos div img{
+    width: 90%;
+    border-radius: 10px;
+    height: 150px;
+}#Projetos button{
+    width: 80%;
+    height: 30px;
+    background-color: var(--destaque02);
+    border: none;
+    border-radius: 10px;
+    color: var(--destaque);
+    margin-top: 20px;
+
+}footer{
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    background-color: var(--destaque02);
+}footer p{
+    margin: 0 auto;
+}#minifooter{
+    background-color: var(--destaque);
+    width: 100%;
+    height: 10px;
+}.tag{
+    border: 3px var(--destaque02) solid;
+    border-radius: 8px;
+    width: 10%;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 10px;
+}#destaque{
+    color: var(--destaque);
 }
-
-
