--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body{
     color: var(--destaque);
 }#sobre{
     display: flex;
+    font-size: 25px;
 
 }.text{
     float: left;
@@ -39,8 +40,8 @@ body{
     margin: -80px 10px 10px 10px;
     
 }.perfil{
-    width: 20%;
-    margin: -100px 10px 10px 30px;
+    width: 30%;
+    margin: -100px 10px 10px 40px;
     border-radius: 108px;
     border: 5px var(--destaque02) solid;
 }#sobre a img{
