--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     background-image: linear-gradient(to top, #051923,#03273C,#003554);
     margin: 0 auto;
     color: white;
+    font-family: 'Roboto', sans-serif;
 }header{
     width: 100%;
     height: 200px;
