--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ body{
 }footer p{
     margin: 0 auto;
 }#minifooter{
-    background-color: var(--destaque02);
+    background-color: #051923;
     width: 100%;
     height: 10px;
 }.tag{
