--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body{
 }#skills div{
     text-align: center;
 }
-#skills a img{
+#skills  img{
     width: 50%;
 }.Html .conteudo{
     width: 50%;
@@ -141,14 +141,14 @@ body{
     border-radius: 10px;
     color: white;
     margin-top: 20px;
+    cursor: pointer;
 
 }#Projetos button:hover{
-
     background-color: #003554;
 
 }footer{
     width: 100%;
-    height: 50px;
+    height: 80px;
     text-align: center;
     background-color: var(--destaque);
 }footer p{
